--- a/app/src/main/res/layout/activity_mine_field.xml
+++ b/app/src/main/res/layout/activity_mine_field.xml
@@ -7,61 +7,12 @@
     tools:context=".ui.MineField">
 
     <GridLayout
+        android:id="@+id/mine_field"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:columnCount="4">
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-        <Button
-            android:layout_width="@dimen/square_size"
-            android:layout_height="@dimen/square_size"/>
-    </GridLayout>
+        app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
