--- a/app/src/main/res/layout/square_layout.xml
+++ b/app/src/main/res/layout/square_layout.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
@@ -7,5 +7,5 @@
         android:id="@+id/image_button"
         android:layout_width="@dimen/square_size"
         android:layout_height="@dimen/square_size"
-        android:src="@drawable/covered"/>
-</LinearLayout>
+        android:src="@drawable/uncovered"/>
+</FrameLayout>
