Adding timer and mines counter

--- a/app/src/main/res/layout/activity_mine_field.xml
+++ b/app/src/main/res/layout/activity_mine_field.xml
@@ -17,6 +17,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent">
             <TextView
+                android:id="@+id/mines_counter"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center"
@@ -24,16 +25,16 @@
                 android:text="0"/>
         </LinearLayout>
         <LinearLayout
-            android:layout_width="120dp"
+            android:layout_width="150dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent">
-            <TextView
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+            <Chronometer
+                android:id="@+id/chronometer"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="70dp"
-                android:text="0"/>
+                android:layout_height="wrap_content"
+                android:textSize="40dp"/>
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
