--- a/app/src/main/res/layout/activity_mine_field.xml
+++ b/app/src/main/res/layout/activity_mine_field.xml
@@ -1,42 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".ui.MineFieldActivity">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:id="@+id/information_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
-            <TextView
-                android:id="@+id/mines_counter"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center"
-                android:textSize="70dp"
-                android:text="0"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent">
-            <Chronometer
-                android:id="@+id/chronometer"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="40dp"/>
-        </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_height="59dp"
+        android:orientation="horizontal">
+        <include android:id="@+id/digital_counter"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
+            android:layout_alignParentStart="true"
+            layout="@layout/digital_counter_layout" />
+        <include android:id="@+id/digital_timer"
+            android:layout_width="wrap_content"
+            android:layout_height="59dp"
+            android:layout_alignParentEnd="true"
+            layout="@layout/digital_timer_layout"/>
+    </RelativeLayout>
 
     <GridLayout
         android:id="@+id/mine_field"
