--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,41 +1,57 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.SettingsActivity">
 
     <TextView
-        android:id="@+id/tv_size_of_field_title"
+        android:id="@+id/number_mines_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/et_size_of_field"
+        app:layout_constraintBottom_toTopOf="@+id/number_mines"
         android:textStyle="bold"
         android:textSize="20dp"
-        android:text="Number of mines"/>
+        android:text="NUMBER OF MINES"/>
+
     <EditText
-        android:id="@+id/et_size_of_field"
+        android:id="@+id/number_mines"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:inputType="number"
-        app:layout_constraintTop_toBottomOf="@+id/tv_size_of_field_title"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bt_play"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/history_title"
+        app:layout_constraintTop_toBottomOf="@+id/number_mines_title"/>
+
     <Button
-        android:id="@+id/bt_play"
+        android:id="@+id/update_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/number_mines"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:text="PLAY"
         android:layout_margin="@dimen/fab_margin" />
+
+    <TextView
+        android:id="@+id/history_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/number_mines"
+        app:layout_constraintStart_toStartOf="parent"
+        android:textStyle="bold"
+        android:textSize="20dp"
+        android:text="HISTORY"/>
+
+    <ListView
+        android:id="@+id/history_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/history_title"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
