--- a/app/src/main/res/layout/activity_mine_field.xml
+++ b/app/src/main/res/layout/activity_mine_field.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -17,42 +16,11 @@
         android:padding="6dp"
         android:background="@color/digital_color_bg">
         <!--COUNTER-->
-        <com.msmikeescom.minesweeper.ui.view.MinesCounter
+        <com.msmikeescom.minesweeper.ui.view.MinesCounterView
             android:id="@+id/mines_counter"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.2"/>
-        <!--androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="1.2"
-            android:background="@color/digital_color_bg">
-            <ImageView
-                android:id="@+id/counter_hundreds"
-                android:layout_width="30dp"
-                android:layout_height="49dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/zero_digit"/>
-            <ImageView
-                android:id="@+id/counter_tens"
-                android:layout_width="30dp"
-                android:layout_height="49dp"
-                app:layout_constraintStart_toEndOf="@+id/counter_hundreds"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/zero_digit" />
-            <ImageView
-                android:id="@+id/counter_units"
-                android:layout_width="30dp"
-                android:layout_height="49dp"
-                app:layout_constraintStart_toEndOf="@+id/counter_tens"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:src="@drawable/zero_digit" />
-        </androidx.constraintlayout.widget.ConstraintLayout-->
         <ImageView
             android:id="@+id/settings"
             android:layout_width="0dp"
@@ -66,17 +34,26 @@
             android:layout_weight="1"
             android:src="@drawable/smile"/>
         <!--CHRONOMETER-->
-        <com.msmikeescom.minesweeper.ui.view.MineFieldChronometer
+        <com.msmikeescom.minesweeper.ui.view.GameChronometerView
             android:id="@+id/chronometer"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_weight="1.8"/>
      </LinearLayout>
 
-    <GridLayout
-        android:id="@+id/mine_field"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"/>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <GridLayout
+                android:id="@+id/mine_field"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"/>
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
