--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,18 @@
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
+        android:icon="@drawable/settings"
+        app:showAsAction="never" />
+    <!--item
+        android:id="@+id/action_records"
+        android:orderInCategory="100"
+        android:title="@string/action_records"
+        android:icon="@drawable/settings"
+        app:showAsAction="never" /-->
+    <item
+        android:id="@+id/action_logout"
+        android:orderInCategory="100"
+        android:title="@string/action_logout"
+        android:icon="@drawable/settings"
         app:showAsAction="never" />
 </menu>
