--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="20dp"
     android:background="@color/settings_color_bg"
-    tools:context=".ui.activity.SettingsActivity">
+    tools:context=".ui.fragment.SettingsFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/num_of_mine_text_layout"
