--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,17 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.msmikeescom.minesweeper.ui.SettingsActivity">
     <item
-        android:id="@+id/action_settings"
+        android:id="@+id/settingsFragment"
         android:orderInCategory="100"
         android:title="@string/action_settings"
         android:icon="@drawable/settings"
         app:showAsAction="never" />
-    <!--item
-        android:id="@+id/action_records"
-        android:orderInCategory="100"
-        android:title="@string/action_records"
-        android:icon="@drawable/settings"
-        app:showAsAction="never" /-->
     <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
