--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -1,6 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<navigation xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/main_nav_graph">
+<navigation xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/main_nav_graph"
+    app:startDestination="@id/loginFragment">
 
+    <fragment
+        android:id="@+id/loginFragment"
+        android:name="com.msmikeescom.minesweeper.ui.fragment.LoginFragment"
+        android:label="LoginFragment" >
+        <action
+            android:id="@+id/action_loginFragment_to_mineFiledFragment"
+            app:destination="@id/mineFiledFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/mineFiledFragment"
+        android:name="com.msmikeescom.minesweeper.ui.fragment.MineFieldFragment"
+        android:label="MineFiledFragment" />
+    <fragment
+        android:id="@+id/settingsFragment"
+        android:name="com.msmikeescom.minesweeper.ui.fragment.SettingsFragment"
+        android:label="SettingsFragment" >
+        <action
+            android:id="@+id/action_settingsFragment_to_mineFiledFragment"
+            app:destination="@id/mineFiledFragment" />
+    </fragment>
 </navigation>
