--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -9,6 +9,12 @@
         android:icon="@drawable/settings"
         app:showAsAction="never" />
     <item
+        android:id="@+id/personalRecordsFragment"
+        android:orderInCategory="100"
+        android:title="@string/action_records"
+        android:icon="@drawable/settings"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/action_logout"
         android:orderInCategory="100"
         android:title="@string/action_logout"
