--- a/app/src/main/res/layout/game_chronometer_view_layout.xml
+++ b/app/src/main/res/layout/game_chronometer_view_layout.xml
@@ -5,7 +5,7 @@
     android:layout_width="0dp"
     android:layout_height="match_parent"
     android:layout_weight="1.8"
-    android:background="@color/digital_color_bg">
+    android:background="@color/background_surface_1">
     <ImageView
         android:id="@+id/tens_minutes"
         android:layout_width="30dp"
