--- a/app/src/main/res/layout/mines_counter_view_layout.xml
+++ b/app/src/main/res/layout/mines_counter_view_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
     android:layout_weight="1.2"
-    android:background="@color/digital_color_bg"
+    android:background="@color/background_surface_1"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <ImageView
         android:id="@+id/counter_hundreds"
